<resources>
    <string name="app_name">MoviesApp</string>
    <string name="back_arrow_text">Back</string>
    <string name="_13_text">13+</string>
    <string name="avengers_end_game_text">Avengers: End Game</string>
    <string name="_13plus_text">13+</string>
    <string name="action_adventure_fantasy_genre">Action, Adventure, Fantasy</string>
    <string name="_125_reviews_text">125 REVIEWS</string>
    <string name="text_137_min">137 MIN</string>
    <string name="storyline">Storyline</string>
    <string name="default_description">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe.</string>
    <string name="cast_text">Cast</string>
    <string name="robert_downey_jr_text">Robert Downey Jr.</string>
    <string name="mark_ruffalo_text">Mark Ruffalo</string>
    <string name="chris_evans_text">Chris Evans</string>
    <string name="chris_hemsworth_text">Chris Hemsworth</string>
    <string name="movies_list">Movies list</string>

    <!--Strings for real data-->
    <string name="minutes_text">MIN</string>
    <string name="reviews_text">reviews</string>

    <!--Copied strings-->
    <!-- Movies list screen -->
    <string name="movies_list_title">Movies app</string>
    <string name="movies_list_header_text">Movies app</string>
    <string name="movies_list_header_icon_description">Target icon</string>
    <string name="movies_list_allowed_age_template">%d+</string>
    <string name="movies_list_reviews_template">%d REVIEWS</string>
    <string name="movies_list_rating_bar_description">Rating bar</string>
    <string name="movies_list_film_time">%d MIN</string>
    <!-- Movies list screen -->

    <!-- Movie Details screen -->
    <string name="back">Back</string>
    <string name="storyline_title">Storyline</string>
    <string name="cast_title">Cast</string>
    <string name="error_movie_not_found">Sorry! Something went wrong - we can not find this movie in the system.</string>
    <string name="retry_text">retry</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Movie Details screen -->

    <!--Movie types names-->
    <string name="movie_type_popular">Popular</string>
    <string name="movie_type_top_rated">Top rated</string>
    <string name="movie_type_latest">Latest</string>
    <string name="movie_type_upcoming">Upcoming</string>

</resources>