<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="170dp"
    android:layout_height="296dp"
    android:elevation="1dp"
    android:id="@+id/film_poster_item">

    <View
        android:id="@+id/poster_border"
        android:layout_width="170dp"
        android:layout_height="296dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:background="@drawable/container_movie_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/poster_image"
        android:layout_width="166dp"
        android:layout_height="248dp"
        android:layout_marginTop="2dp"
        android:foregroundGravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="@id/poster_border"
        app:layout_constraintStart_toStartOf="@id/poster_border"
        app:layout_constraintTop_toTopOf="@id/poster_border">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/avengers_end_game_poster" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_mask_movies_list" />
    </FrameLayout>

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/ic_like"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/rectangle_age"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:alpha="0.9"
        android:background="@drawable/rectanle_age_movie_list_item"
        android:gravity="center_horizontal|center_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:fontFamily="@font/roboto_black"
        android:text="@string/_13plus_text"
        android:textColor="@color/white"
        android:textSize="@dimen/small_text"
        app:layout_constraintBottom_toBottomOf="@+id/rectangle_age"
        app:layout_constraintEnd_toEndOf="@+id/rectangle_age"
        app:layout_constraintStart_toStartOf="@+id/rectangle_age"
        app:layout_constraintTop_toTopOf="@+id/rectangle_age"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/genre_tv"
        style="@style/genre_poster"
        android:text="@string/action_adventure_fantasy_genre"
        app:layout_constraintBottom_toBottomOf="@id/guideline"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/star_icon1"
        style="@style/rating_star_film_poster"
        android:layout_marginStart="8dp"
        android:src="@drawable/ic_star_icon_pink"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genre_tv" />

    <ImageView
        android:id="@+id/star_icon2"
        style="@style/rating_star_film_poster"
        android:layout_marginStart="2dp"
        android:src="@drawable/ic_star_icon_pink"
        app:layout_constraintStart_toEndOf="@+id/star_icon1"
        app:layout_constraintTop_toBottomOf="@+id/genre_tv" />

    <ImageView
        android:id="@+id/star_icon3"
        style="@style/rating_star_film_poster"
        android:layout_marginStart="2dp"
        android:src="@drawable/ic_star_icon_pink"
        app:layout_constraintStart_toEndOf="@+id/star_icon2"
        app:layout_constraintTop_toBottomOf="@+id/genre_tv" />

    <ImageView
        android:id="@+id/star_icon4"
        style="@style/rating_star_film_poster"
        android:layout_marginStart="2dp"
        android:src="@drawable/ic_star_icon_pink"
        app:layout_constraintStart_toEndOf="@+id/star_icon3"
        app:layout_constraintTop_toBottomOf="@+id/genre_tv" />

    <ImageView
        android:id="@+id/star_icon5"
        style="@style/rating_star_film_poster"
        android:layout_marginStart="2dp"
        android:src="@drawable/ic_star_icon"
        app:layout_constraintStart_toEndOf="@+id/star_icon4"
        app:layout_constraintTop_toBottomOf="@+id/genre_tv" />

    <TextView
        android:id="@+id/reviews_count_tv"
        android:layout_width="0dp"
        android:layout_height="12dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="6dp"
        android:layout_marginTop="2dp"
        android:fontFamily="@font/roboto_black"
        android:gravity="center_vertical"
        android:lineSpacingExtra="3sp"
        android:text="@string/_125_reviews_text"
        android:textColor="@color/grey"
        android:textSize="8sp"
        app:layout_constraintStart_toEndOf="@+id/star_icon5"
        app:layout_constraintTop_toBottomOf="@+id/genre_tv" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8445946" />

    <!--This view used for background phone-->
    <View
        android:id="@+id/view_bottom_background"
        android:layout_width="166dp"
        android:layout_height="44dp"
        android:background="@drawable/container_movie_list_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline" />

    <TextView
        android:id="@+id/film_name_tv"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/roboto_black"
        android:text="@string/avengers_end_game_text"
        android:textColor="@color/changed_white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@id/view_bottom_background"
        app:layout_constraintStart_toStartOf="@+id/view_bottom_background"
        app:layout_constraintTop_toBottomOf="@+id/poster_image" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/roboto_black"
        android:text="@string/text_137_min"
        android:textColor="@color/film_length_color"
        android:textSize="8sp"
        app:layout_constraintEnd_toEndOf="@id/view_bottom_background"
        app:layout_constraintStart_toStartOf="@id/view_bottom_background"
        app:layout_constraintTop_toBottomOf="@id/film_name_tv" />

</androidx.constraintlayout.widget.ConstraintLayout>